--- a/templates/index.html
+++ b/templates/index.html
@@ -7,42 +7,52 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Flask Plotlyjs Example</title>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+  <link href="https://fonts.googleapis.com/css?family=Bungee+Inline" rel="stylesheet">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/reset.css') }}">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 
 <body>
 
   <div class="container-fluid">
-    <div class="row">
-      <div class="col-md-12 jumbotron text-center">
-        <h1>Belly Button Biodiversity Dashboard</h1>
-        <p>Use the interactive charts below to explore the dataset</p>
-        <div class="col-md-2" align="center">
+      <div class="jumbotron">
+        <h1>Belly Button Biodiversity</h1>
+        <p>explore biodiversity with interactive dashboards</p>
+        <div id="select" class="col-md-3">
         <div class="well">
-          <h5>SELECT Sample:</h5>
+          <h5>SELECT:</h5>
           <select id="selDataset" onchange="optionChanged(this.value)"></select>
-        </div>
         </div>
       </div>
     </div>
     <div class="row">
-
-      <div class="col-md-2">
-        <div class="panel panel-primary">
-          <div class="panel-heading">
-            <h3 class="panel-title">Sample MetaData</h3>
+      <div class="col-md-3">
+      <div class="panel panel-default">
+          <div id="head" class="panel-heading">
+            <h2 class="panel-title">Description:</h2>
+          </div>
+          <div id="body" class="panel-body"></div>
+          <h5>The belly button is one of the habitats closest to us, and yet it remains relatively unexplored. In January 2011, Belly Button Biodiversity project was launched to investigate the microbes inhabiting our navels and the factors that might influence the microscopic life calling this protected, moist patch of skin home.</h5>
+      </div>
+      </div>
+      <div class="col-md-6">
+        <div id="pie"></div>
+      </div>
+      <div class="col-md-3">
+      <div class="panel panel-default">
+          <div id="head" class="panel-heading">
+            <h2 class="panel-title">Sample MetaData:</h2>
           </div>
           <div id="sample-metadata" class="panel-body"></div>
         </div>
-      </div>
-      <div class="col-md-5">
-        <div id="pie"></div>
-      </div>
-      <div class="col-md-5">
-        <div id="gauge"></div>
-      </div>
     </div>
   </div>
- </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div id="bubble"></div>
+    </div>
+  </div>
+
   <!-- <script src="https://cdn.plot.ly/plotly-1.31.2.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3/5.5.0/d3.js"></script>
   <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
